# nlp_research_project

./: .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENTS.md  PLAN.md  README.md  TODO.md  analyze.py  analyze.sbatch  circuit_utils.py  evaluate.py  evaluate.sbatch  explore_analysis.py  explore_pipeline.cardinal.sbatch  explore_pipeline.py  midpoint_checkin_draft.md  plan.md  pyproject.toml  trace_pipeline.ascend.sbatch  trace_pipeline.py  trace_pipeline.sbatch  trace_pipeline_chunked.py  trace_pipeline_chunked.sbatch
docs/: README.md  consolidation_merge_notes.md  current_project_roadmap.md  double_pass_sparsification_spec.md  exact_trace_sweep_campaign_spec.md  full_answer_harness_spec.md  harness.md  knob_api_taxonomy.md  next_exact_optimization_paths_spec.md  phase0_boundary_fingerprinting_spec.md  phase4_refresh_optimization_spec.md  phase4_scheduler_v2_spec.md  post_consolidation_cleanup_spec.md  prefix_caching_plan.md  tracing_profiling_spec.md  worktree_consolidation_plan.md
experiments/: analyze_decoder_aware_comparison.py  analyze_sparsification_experiment.py  build_decoder_aware_comparison_configs.py  build_feature_distribution_analysis_configs.py  build_sparsification_experiment_configs.py  build_weekend_exact_chunked_benchmark_configs.py  exact_trace_wave0_fixture_targets.json  extract_benchmark_index.py  extract_feature_distribution.py  extract_runlog_metrics.py  extract_slurm_err_ooms.py  extract_utils.py  merge_benchmark_tables.py  plot_memory_work_slide.py  plot_optimization_benchmarks.py  plot_overflow_runtime_slide.py  plot_problem_of_scale_slide.py  prepare_weekend_prefix_fixtures.py  print_scenario_count.py  (+8 more)
(+142 files in other folders)
