[project]
name = "research-project"
version = "0.1.0"
description = "Temporal Circuit Stability for LLM Reliability"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "circuit-tracer",
    "datasets",
    "torch",
    "accelerate",
    "tqdm>=4.67.3",
    "openai",
    "matplotlib",
    "python-dotenv",
    "numpy",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_research_project"]

[project.scripts]
exact-trace-bench = "nlp_research_project.exact_trace_bench.cli:main"

[tool.uv.sources]
circuit-tracer = { path = "../circuit-tracer_chunked", editable = true }
